<resources>
    <string name="app_name">Recycler</string>
    <string name="m_sica">MÚSICA</string>
    <string name="canci_n_actual">Canción Actual</string>
    <string name="t_tulo_de_la_pista">Título de la Pista</string>
    <string name="en_reproducci_n">En Reproducción</string>
    <string name="n">N°</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>