<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    >

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.recycler.BlankFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tituloMusica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#A7263E"
        android:gravity="center_horizontal"
        android:text="@string/m_sica"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaRecycler"
        android:layout_width="310dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:background="#8C08FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"></androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/enReproduccion"
        android:layout_width="137dp"
        android:layout_height="35dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="120dp"
        android:background="#521785"
        android:gravity="center"
        android:hint="@string/canci_n_actual"
        android:textAlignment="center"
        android:textColorHint="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tituloPista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reproduciendo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/reproduciendo"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginBottom="80dp"
        android:background="#521785"
        android:gravity="center"
        android:text="@string/en_reproducci_n"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/cancionActual"
        app:layout_constraintEnd_toStartOf="@+id/enReproduccion"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backMusic"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cancionActual"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:background="#521785"
        android:gravity="center"
        android:hint="@string/n"
        android:textAlignment="center"
        android:textColorHint="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/listaRecycler"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tituloPista"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginEnd="48dp"
        android:background="#521785"
        android:gravity="center"
        android:hint="@string/t_tulo_de_la_pista"
        android:textAlignment="center"
        android:textColorHint="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/listaRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cancionActual"
        app:layout_constraintTop_toBottomOf="@+id/reproduciendo"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/pause"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tituloMusica"
        app:layout_constraintVertical_bias="0.142"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <ImageButton
        android:id="@+id/backMusic"
        android:layout_width="75dp"
        android:layout_height="75dp"

        android:layout_marginStart="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pause"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/nextMusic"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pause"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158"
        app:srcCompat="@android:drawable/ic_media_next" />

</androidx.constraintlayout.widget.ConstraintLayout>